workflow: Generate release checksums
Add a script to generate SHA256 checksums for the artifacts and
execute it during the do_release job, including its output as
part of the release assets.

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -184,8 +184,12 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           path: artifacts/
+      - name: Generate checksums
+        run: |
+          ./generate-release-checksums.sh artifacts/
       - name: Make release
         uses: softprops/action-gh-release@v0.1.15
         with:
           files: |
             artifacts/**/plebian*.img.xz
+            artifacts/**/plebian*.img.xz.sha256
