debos: Include firmware-brcm80211 to make wifi work
Since version 20230210-2 the firmware-brcm80211 package includes the
needed files to make wifi work on Model B, both 2.4Ghz and 5Ghz.

--- a/debos-recipes/debian-quartz64.yaml
+++ b/debos-recipes/debian-quartz64.yaml
@@ -59,6 +59,7 @@ actions:
       - dbus-broker
       - e2fsprogs
       - file
+      - firmware-brcm80211
       - gawk
       - initramfs-tools
       - liblockfile-bin
