debos: Rebuild the initramfs after installing the resize hook
Previously this was done by the kernel installation, but since
we no longer install the kernel after copying this stuff in
it's not included.

Explicitly always rebuild the initramfs yet another time to
avoid problems like this going forward.

Fixes #30.

--- a/debos-recipes/debian-quartz64.yaml
+++ b/debos-recipes/debian-quartz64.yaml
@@ -128,6 +128,11 @@ actions:
     destination: /etc/initramfs-tools/
 
   - action: run
+    description: Rebuild initramfs
+    chroot: true
+    command: update-initramfs -u -k all
+
+  - action: run
     description: Set up u-boot default file
     chroot: true
     script: scripts/set-u-boot-defaults.sh {{ $board }}
