workflow: do_release: Include u-boot in release
For upgrading u-boot, having the u-boot artefacts as part of the
release is helpful.

--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -187,9 +187,13 @@ jobs:
       - name: Generate checksums
         run: |
           ./generate-release-checksums.sh artifacts/
+      - name: Tar up u-boot binaries
+        run: |
+          tar -caf u-boot.tar.gz artifacts/u-boot*
       - name: Make release
         uses: softprops/action-gh-release@v0.1.15
         with:
           files: |
             artifacts/**/plebian*.img.xz
             artifacts/**/plebian*.img.xz.sha256
+            u-boot.tar.gz
