--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -169,7 +169,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            golang \
+            golang-1.19 \
             git \
             libglib2.0-dev \
             libostree-dev \
