--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -1,5 +1,6 @@
 name: Build Quartz64 Images
 on: workflow_dispatch
+
 jobs:
   build_uboot:
     strategy:
@@ -78,41 +79,6 @@ jobs:
             u-boot-quartz64/u-boot-rockchip.bin
             u-boot-quartz64/u-boot-rockchip-spi.bin
 
-  # build_kernel:
-  #   runs-on: self-hosted
-  #   steps:
-  #     - name: Clone workflow repository
-  #       uses: actions/checkout@v4
-  #     - name: Install toolchain
-  #       run: |
-  #         sudo apt-get -yq update && sudo apt-get -yq upgrade
-  #         sudo apt-get -yq install build-essential crossbuild-essential-arm64 device-tree-compiler \
-  #           autoconf bc bison flex ccache cpio dkms fakeroot kmod quilt rsync dh-exec \
-  #           libssl-dev libncurses-dev libelf-dev libudev-dev libpci-dev libiberty-dev
-  #     - name: Clone kernel repository
-  #       uses: actions/checkout@v4
-  #       with:
-  #         repository: 'CounterPillow/linux'
-  #         ref: 'quartz64-deploy'
-  #         path: 'linux'
-  #     - name: Make config
-  #       run: |
-  #         cp config linux/.config
-  #         cd linux
-  #         make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- olddefconfig
-  #     - name: Build kernel
-  #       run: |
-  #         cd linux
-  #         make -j"$(nproc)" ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- deb-pkg
-  #     - name: Archive kernel artifacts
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: linux-kernel
-  #         path: |
-  #           linux-image-*.deb
-  #           linux-libc-dev*.deb
-  #           !linux-image-*dbg*.deb
-
   build_image:
     strategy:
       matrix:
@@ -146,7 +112,6 @@ jobs:
     runs-on: ubuntu-22.04
     needs:
       - build_uboot
-      # - build_kernel
     env:
       GOPATH: /opt/src/gocode
     steps:
@@ -159,17 +124,10 @@ jobs:
           name: u-boot-${{ matrix.boards.uboot-name }}
           path: debos-recipes/u-boot/
 
-      # - name: Download kernel artifacts
-      #   uses: actions/download-artifact@v4
-      #   with:
-      #     name: linux-kernel
-      #     path: debos-recipes/overlays/linux-kernel/
-
       - name: Install debos dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            golang-1.19 \
             git \
             libglib2.0-dev \
             libostree-dev \
@@ -177,6 +135,12 @@ jobs:
             qemu-user-static \
             debootstrap \
             systemd-container
+
+      # --- Here's the key step to install Go 1.19 ---
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.19'
 
       - name: Install debos
         run: go install -v github.com/go-debos/debos/cmd/debos@latest
